spezi some changes

--- a/doku/spezi/spezi.tex
+++ b/doku/spezi/spezi.tex
@@ -80,7 +80,7 @@ und die Daten in das Archiv schreiben.
 		sodass auch veraltete Analysedaten gelöscht werden.\\
 		Zum Abschluss werden die Änderungen den Versionsverwaltungen der Domainordner mit einem Commit bestätigt.
 	\subsubsection{Datenbankaktualisierung}
-		Während oder nach dem Synchronisationsvorgang wird ein Datenbankdump für die neuen oder geänderten Daten
+		Während oder nach dem Synchronisationsvorgang wird ein Batch von SQL-Statements für die neuen oder geänderten Daten
 		zur Aktualisierung der Datenbank erstellt.
 \subsection{Filter}
 	Filter können über die Konfiguration beim Starten bekannt gemacht werden und werden als Module/Plugins hinzugefügt.
