Englisch-Filter zu Werbefilter geändert

--- a/doku/spezi/spezi.tex
+++ b/doku/spezi/spezi.tex
@@ -86,8 +86,8 @@ und die Daten in das Archiv schreiben.
 	Filter können über die Konfiguration beim Starten bekannt gemacht werden und werden als Module/Plugins hinzugefügt.
 	Während des Teilvorgangs \ref{spec:req:crawler:filter} erhalten diese eine HTML-Datei und geben nach Prüfung einen Wahrheitswert zurück
 	ob die übergebene HTML-Datei behalten werden soll.
-	\subsubsection{Testfilter: Englische Sprache}
-		Als Testfilter wird ein Filter implementiert, der nichtenglische Seiten aussortiert.
+	\subsubsection{Testfilter: Werbefilter}
+		Als Testfilter wird ein Filter implementiert, der über eine Blacklist bestimmte Werbedomains aussortiert.
 
 
 \section{Archiv} \label{spec:req:archive}
