--- a/doku/spezi/spezi.tex
+++ b/doku/spezi/spezi.tex
@@ -24,6 +24,7 @@ Die XML-Dateien sollen grundsätzlich um neue Tags/Nodes erweitert werden könne
 	Name & Datentyp \\
 	\hline
 	URL & String \\
+	Titel des Dokuments & String \\ %?? kopiert aus Anforderung
 	Dateipfad des Archivordners im Archiv & String \\
 	Datum der letzten Änderung & TimeStamp oder Integer \\
 	Commit Tag der Versionsverwaltung & String \\
